<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".ui.changePass.PasswordChangeActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="159dp"
        android:hint="@string/old_pass"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:layout_constraintBottom_toTopOf="@+id/updatePassButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_view_pass"
        app:layout_constraintVertical_bias="0.25"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/presence_online">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldpass"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="331dp"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/new_pass"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:layout_constraintBottom_toTopOf="@+id/updatePassButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/presence_away">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newpass"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_view_pass"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="64dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/updatePassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="186dp"
        android:text="@string/update_pass"
        app:backgroundTint="#7C4DFF"
        app:icon="@drawable/change_password"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>