<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/grad">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="945dp"
            tools:context=".ui.quedadasAdd.QuedadasAddActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addQuedadasImageView"
                android:layout_width="203dp"
                android:layout_height="193dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/placeholder_image"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lugarInputLayout"
                android:layout_width="350dp"
                android:layout_height="63dp"
                android:layout_marginStart="32dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
                app:startIconDrawable="@drawable/lugar_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lugarTextAdd"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/place"
                    android:backgroundTint="#ffff"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calleInputLayout"
                android:layout_width="350dp"
                android:layout_height="63dp"
                android:layout_marginStart="32dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lugarInputLayout"
                app:startIconDrawable="@drawable/calle_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calleTextAdd"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:backgroundTint="#ffff"
                    android:hint="@string/street"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="350dp"
                android:layout_height="63dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="17dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addQuedadasImageView"
                app:startIconDrawable="@drawable/name_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTextAdd"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:hint="@string/quedada_name"
                    android:backgroundTint="#ffff"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBarQuedadas"
                style="?android:attr/progressBarStyle"
                android:layout_width="86dp"
                android:layout_height="91dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_date_1"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="68dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/button_date_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calleInputLayout" />

            <Button
                android:id="@+id/button_date_1"
                android:layout_width="142dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:text="@string/change_date"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calleInputLayout" />

            <TextView
                android:id="@+id/text_view_time_1"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="68dp"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="12dp"
                android:textColor="#000000"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/pickTimeBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_date_1" />

            <Button
                android:id="@+id/pickTimeBtn"
                android:layout_width="142dp"
                android:layout_height="55dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="36dp"
                android:text="@string/change_time"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_date_1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/usernamesAddRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="268dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_time_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/addQuedadaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/add_quedada"
            app:backgroundTint="#7C4DFF"
            app:icon="@drawable/add_icon"
            app:layout_anchorGravity="bottom|right|end" />
    </LinearLayout>

</ScrollView>


